--- a/Assignments/Final/Final.html
+++ b/Assignments/Final/Final.html
@@ -56,7 +56,7 @@
 					<!-- Sketch goes in here -->
 				</div><!-- Sketch Holder Ends Here -->
 
-                <h2>Description</h2>
+<!--                <h2>Description</h2>-->
 
                 <p></p>
 
@@ -74,6 +74,7 @@
         </div>
         <!-- For Sketch -->
         <script src="js/p5.min.js"></script>
+        <script src="js/p5.dom.js"></script>
         <script src="js/p5.dom.min.js"></script>
         <script src="js/p5.sound.js"></script>
         <!-- Sketch -->
