--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -16,7 +16,7 @@
 <body>
 
 	<div class="animsition">
-		<div class="container">
+
 
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
@@ -67,37 +67,37 @@
             
 			<div class="container-fluid assignment-container" id="assignments">
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment1/self_portrait.html"><img alt="Assignment 1" src="img/assignment1.png"> <span class="caption">Assignment #1<br>
+					<a href="Assignment1/self_portrait.html"><img alt="Assignment 1" src="img/assignment_1.jpg"> <span class="caption">Assignment #1<br>
 					<b>Self Portrait</b></span></a>
 				</div>
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment2/Assignment_2.html"><img alt="Assignment 2" src="img/assignment2.png"> <span class="caption">Assignment #2<br>
+					<a href="Assignment2/Assignment_2.html"><img alt="Assignment 2" src="img/assignment_2.jpg"> <span class="caption">Assignment #2<br>
 					<b>Variables</b></span></a>
 				</div>
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment3/Assignment_3.html"><img alt="Assignment 3" src="img/assignment3.png"> <span class="caption">Assignment #3<br>
+					<a href="Assignment3/Assignment_3.html"><img alt="Assignment 3" src="img/assignment_3.jpg"> <span class="caption">Assignment #3<br>
 					<b>Logo</b></span></a>
                 </div>
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment4/Assignment_4.html"><img alt="Assignment 4" src="img/assignment4.png"> <span class="caption">Assignment #4<br>
+					<a href="Assignment4/Assignment_4.html"><img alt="Assignment 4" src="img/assignment_4.jpg"> <span class="caption">Assignment #4<br>
 					<b>Interactive Design</b></span></a>
                 </div>
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment5/Assignment_5.html"><img alt="Assignment 5" src="img/assignment5.png"> <span class="caption">Assignment #5<br>
+					<a href="Assignment5/Assignment_5.html"><img alt="Assignment 5" src="img/assignment_5.jpg"> <span class="caption">Assignment #5<br>
 					<b>Logic</b></span></a>
                 </div>
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment6/Assignment_6.html"><img alt="Assignment 6" src="img/assignment6.gif"> <span class="caption">Assignment #6<br>
+					<a href="Assignment6/Assignment_6.html"><img alt="Assignment 6" src="img/assignment_6.gif"> <span class="caption">Assignment #6<br>
 					<b>Animation</b></span></a>
                 </div>
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment7/Assignment_7.html"><img alt="Assignment 7" src="img/assignment7.png"> <span class="caption">Assignment #7<br>
+					<a href="Assignment7/Assignment_7.html"><img alt="Assignment 7" src="img/assignment_7.jpg"> <span class="caption">Assignment #7<br>
 					<b>Loops & Functions</b></span></a>
                 </div>
 
@@ -111,14 +111,14 @@
 			<div class="container-fluid assignment-container" id="assignments">
                 <!-- Seperated col Here to Avoid Delays when Hovering -->                
 				<div class="center col-sm-6 assignment-hover">
-					<a href="Final/Final.html"><img alt="Final" src="img/assignment2.png"> <span class="caption">Final<br>
+					<a href="Final/Final.html"><img alt="Final" src="img/assignment_2.jpg"> <span class="caption">Final<br>
 					<b>Interactive Media Player</b></span></a>
                 </div>
             </div>
 
             <h2><a id="back-top" title="Back to top" href="#">Back To Top</a></h2>
 
-		</div><!-- /.container -->
+
 	</div><!-- Animsition Ends Here -->
 	<div class="footer">
 		<footer class="footer">
