--- a/Assignments/Final/Final.html
+++ b/Assignments/Final/Final.html
@@ -16,12 +16,13 @@
 </head>
 
 <body>
-	<header>
-		<h1>Welcome to MMP 210</h1>
-	</header>
+
 
 	<div class="animsition">
-		<div class="container">
+	   <header>
+		  <h1>Welcome to MMP 210</h1>
+	   </header>
+        <div class="container">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
 					<div class="navbar-header">
@@ -56,7 +57,7 @@
 					<!-- Sketch goes in here -->
 				</div><!-- Sketch Holder Ends Here -->
 
-<!--                <h2>Description</h2>-->
+                <h2>Description</h2>    
 
                 <p></p>
 
@@ -77,8 +78,6 @@
         <script src="js/p5.dom.js"></script>
         <script src="js/p5.dom.min.js"></script>
         <script src="js/p5.sound.js"></script>
-        <!-- Sketch -->
-        <script src="js/sketch.js"></script>
         <!-- jQuery -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
@@ -86,11 +85,14 @@
 		<script src="../../animsition/js/animsition.min.js"></script><!-- Animsition js --> 
 		<script src="../../animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
 	</div>
+        <!-- Sketch -->
+        <script src="js/sketch.js"></script>
     <!-- Responsive Sketch -->
     <script type="text/javascript">
-        window.onload = () => {
-            document.querySelector('#defaultCanvas0').removeAttribute('style');
-        }
+        window.setTimeout( function() {
+            var myCanvas = document.getElementsByTagName('canvas')[0];
+            myCanvas.removeAttribute('style');
+        }, 100);
     </script>
 </body>
 </html>
