--- a/Assignments/Final/Final.html
+++ b/Assignments/Final/Final.html
@@ -19,36 +19,7 @@
 
 
 	<div class="animsition">
-	   <header>
-		  <h1>Welcome to MMP 210</h1>
-	   </header>
-        <div class="container">
-			<nav class="navbar navbar-default">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
-					</div><!-- Navbar Header-->
 
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav">
-
-							<li>
-								<a class="animsition-link" href="../../index.html">Home</a>
-							</li>
-
-
-							<li class="active">
-								<a class="animsition-link" href="../assignments.html">Assignments<span class="sr-only">(current)</span></a>
-							</li>
-
-							<li>
-								<a class="animsition-link" href="../../About/about.html">About</a>
-							</li>
-
-						</ul>
-					</div><!-- /.navbar-collapse -->
-				</div><!-- /.container-fluid -->
-			</nav>
 
 			<h2>Final: Interactive Media Player</h2>
 
@@ -61,18 +32,10 @@
 
                 <p></p>
 
-                <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
-
 			</div><!-- Text Ends Here -->
 		</div><!-- /.container -->
 
-        <div class="footer">
-            <footer class="footer">
-                <div class="container">
-                    <p class="text-muted">Designed by Jose &copy; 2017</p>
-                </div>
-            </footer>
-        </div>
+
         <!-- For Sketch -->
         <script src="js/p5.min.js"></script>
         <script src="js/p5.dom.js"></script>
@@ -87,7 +50,7 @@
 	</div>
         <!-- Sketch -->
         <script src="js/sketch.js"></script>
+    <!-- Responsive Sketch -->
 
-    </script>
 </body>
 </html>
