--- a/Assignments/Final/Final.html
+++ b/Assignments/Final/Final.html
@@ -1,56 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="utf-8">
-	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>MMP 210 Homepage</title>
-	<link href="../../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
-
-	<link href="../../animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
-	<link href="css/styles.css" rel="stylesheet"><!-- My Css -->
+    <link href="https://fonts.googleapis.com/css?family=Sintony" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
 </head>
-
 <body>
+    <h1>Final: Interactive Media Player</h1>  
+    <p>Use the mouse to press on any of the buttons below to play the pronounciation of the Japanese characters.</p>
+    <p>There are also some basic phrases that you can click on to hear the way it is pronounced</p>
+    <script src="js/p5.min.js"></script>
+    <script src="js/p5.dom.min.js"></script>
+    <script src="js/p5.sound.js"></script>
 
-
-	<div class="animsition">
-
-
-			<h2>Final: Interactive Media Player</h2>
-
-			<div class="text">
-				<div id="sketch-holder">
-					<!-- Sketch goes in here -->
-				</div><!-- Sketch Holder Ends Here -->
-
-                <h2>Description</h2>    
-
-                <p></p>
-
-			</div><!-- Text Ends Here -->
-		</div><!-- /.container -->
-
-
-        <!-- For Sketch -->
-        <script src="js/p5.min.js"></script>
-        <script src="js/p5.dom.js"></script>
-        <script src="js/p5.dom.min.js"></script>
-        <script src="js/p5.sound.js"></script>
-        <!-- jQuery -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-		<script src="../../Bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap js -->
-		<script src="../../animsition/js/animsition.min.js"></script><!-- Animsition js --> 
-		<script src="../../animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
-	</div>
-        <!-- Sketch -->
-        <script src="js/sketch.js"></script>
-    <!-- Responsive Sketch -->
+    <!-- Sketch -->
+    <script src="js/sketch.js"></script>
 
 </body>
 </html>
