redid layout for all pages, not yet responsive.

--- a/Assignments/Assignment1/Assignment_1.html
+++ b/Assignments/Assignment1/Assignment_1.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<title>MMP 210 | Assignment #7</title>
+	<title>MMP 210 | Assignment #1</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Fonts -->
@@ -32,12 +32,11 @@
                 </ul>
             </div>
         </nav>
-        <h1>Assignment 7: Loops</h1>
+        <h1>Assignment 1: Self Portrait</h1>
         <div class="container">
             <div id="sketch-holder">
                 <!-- Sketch goes in here -->
             </div>
-            <p><a class="animsition-link" href="Assignment7_Functions/Assignment_7_Functions.html">See Function Version Here</a></p>
         </div>
         <footer>
             <div class="row text-center">
@@ -48,9 +47,9 @@
             </div>
         </footer>
 	</div>
-    <script src="js/p5.min.js"></script><!-- For Sketch -->
-    <script src="js/sketch.js"></script> <!-- Sketch -->
-
+    <!-- Sketch -->
+    <script src="js/p5.min.js"></script>
+    <script src="js/sketch.js"></script>
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
