--- a/index.html
+++ b/index.html
@@ -4,84 +4,52 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<title>MMP 210 Homepage</title>
+	<title>Jose Torralba | MMP 210</title>
     <!-- Bootstrap CSS -->
-	<link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <!-- Animsition CSS -->
 	<link href="animsition/css/animsition.min.css" rel="stylesheet">
-    <!-- My CSS -->
+    <!-- Custom CSS -->
 	<link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-
-	<div class="animsition">
-
-
-			<nav class="navbar navbar-default">
-
-					<div class="navbar-header">
-
-						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-                            <span class="sr-only">Toggle navigation</span> 
-                            <span class="icon-bar"></span> 
-                            <span class="icon-bar"></span> 
-                            <span class="icon-bar"></span></button>
-
-                        <a id="nav-name" class="navbar-brand animated-links" href="index.html">MMP 210</a>
-
-					</div><!-- Navbar Header-->
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav">
-
-							<li class="active">
-								<a class="animsition-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-							</li>
-
-							<li>
-								<a class="animsition-link" href="Assignments/assignments.html">Assignments</a>
-							</li>
-
-							<li>
-								<a class="animsition-link" href="About/about.html">About</a>
-							</li>
-
-						</ul>
-					</div><!-- /.navbar-collapse -->
-
-			</nav>
-
-          <!-- Header -->
-          <div id="header" class="header">
-            <div class="container">
-              <div class="col-lg-12">
-                <h1>Welcome to MMP 210</h1>
-              </div>
+    <div class="animsition">
+        <nav id="mainNav" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand animsition-link" href="index.html">Jose Torralba</a> <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarCollapse" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link animsition-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link animsition-link" href="Assignments/assignments.html">Assignments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link animsition-link" href="About/about.html">About</a>
+                    </li>
+                </ul>
             </div>
-          </div>
-
-			<div class="text">
-
-                <p>Here you will find my Assignments, Midterm and Final that I have done for my MMP 210 Class back in my Fall 2017 Semester in Borough of Manhattan Community College.</p>
-
-                <a class = "link animsition-link"   href="Assignments/assignments.html">Go To Assignments</a>
-
-			</div><!-- Text Ends Here -->
-
-
-		<div class="footer">
-			<footer class="footer">
-				<div class="container">
-					<p class="text-muted">Designed by Jose &copy; 2017</p>
-				</div>
-			</footer>
-		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- jQuery -->
-		<script src="Bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap js -->
-		<script src="animsition/js/animsition.min.js"></script><!-- Animsition js --> 
-		<script src="animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
+        </nav>
+        <header>
+            <div class="text-center">
+                <h1 class="home-title">Multimedia Programming I</h1>
+                <h2 class="home-sub-title">Borough of Manhattan Community College</h2>
+                <a class="btn home-btn animsition-link" href="Assignments/assignments.html">Check out my assignments</a>
+            </div>
+            <div class="footer">
+                <p>&copy; 2017 Designed & Developed by Jose Torralba</p>
+            </div>
+        </header>
 	</div>
+    <!-- Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <!-- Animsition -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="animsition/js/animsition.min.js"></script>
+	<script src="animsition/js/fade.js"></script>
 </body>
 </html>
