--- a/About/about.html
+++ b/About/about.html
@@ -4,92 +4,62 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-
-	<title>MMP 210 Homepage</title>
-
-	<link href="../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
-
+	<title>Jose Torralba | About</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
-
-	<link href="../animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
-	<link href="css/styles.css" rel="stylesheet"><!-- My CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <!-- Animsition CSS -->
+	<link href="../animsition/css/animsition.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+	<link href="css/styles.css" rel="stylesheet">
 </head>
-
 <body>
-
-
-	<div class="animsition">
-		<div class="container">
-
-			<nav class="navbar navbar-default">
-				<div class="container-fluid">
-					<div class="navbar-header">
-
-						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-                            <span class="sr-only">Toggle navigation</span> 
-                            <span class="icon-bar"></span> 
-                            <span class="icon-bar"></span> 
-                            <span class="icon-bar"></span></button>
-
-                        <a id="nav-name" class="navbar-brand animated-links" href="index.html">MMP 210</a>
-
-					</div><!-- Navbar Header-->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav">
-
-							<li>
-								<a class="animsition-link" href="../index.html">Home</a>
-							</li>
-
-							<li>
-								<a class="animsition-link" href="../Assignments/assignments.html">Assignments<span class="sr-only">(current)</span></a>
-							</li>
-
-							<li class="active">
-								<a class="animsition-link" href="about.html">About</a>
-							</li>
-
-						</ul>
-					</div><!-- /.navbar-collapse -->
-				</div><!-- /.container-fluid -->
-			</nav>
-
-
-          <!-- Header -->
-          <div id="header" class="header">
-            <div class="container">
-              <div class="col-lg-12">
-                <h1>Get To Know Me</h1>
-              </div>
+    <div class="animsition">
+        <nav id="mainNav" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand animsition-link" href="../index.html">Jose Torralba</a> <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarCollapse" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link animsition-link" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link animsition-link" href="../Assignments/assignments.html">Assignments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link animsition-link active" href="about.html">About</a>
+                    </li>
+                </ul>
             </div>
-          </div>
-
-            <div class="text">
-                <img src="img/temp2.jpg">
+        </nav>
+        <!-- ABOUT SECTION -->
+        <section class="about-section">
+            <div class="row">
+                <h1 id="about">About Me</h1>
             </div>
+            <div class="row">
+                <div class="col-md-7 order-2 order-md-12 ">
 
-			<div class="text">
+                    <p class="lead">The name's Jose, a Graphic Designer from New York City. I'm currently attending Borough of Manhattan Community College making my way towards a degree in Multimedia Arts. I am passionate about the work I do, I always put a lot of time and effort into the things I do. I also do web designing which I enjoy learning and doing. I usually spend my free time walking my dog and playing on my PS4.</p>
+                    <p class="lead">I know there are some typos here and there. I'm usually up until 4am messing with the page Please don't roast me.</p>
 
-                <p>The name's Jose, a Graphic Designer from New York City. I'm currently attending Borough of Manhattan Community College making my way towards a degree in Multimedia Arts. I am passionate about the work I do, I always put a lot of time and effort into the things I do. I also do web designing which I enjoy learning and doing. I usually spend my free time walking my dog and playing on my PS4.</p>
-
-
-                <p>I know there are some typos here and there. I'm usually up until 4am messing with the page Please don't roast me.</p>
-
-			</div><!-- /.text -->
-		</div><!-- /.container -->
-		<div class="footer">
-			<footer class="footer">
-				<div class="container">
-					<p class="text-muted">Designed by Jose &copy; 2017</p>
-				</div>
-			</footer>
-		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- jQuery -->
-		<script src="../Bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap js -->
-		<script src="../animsition/js/animsition.min.js"></script><!-- Animsition js --> 
-		<script src="../animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
+                </div>
+                <div class="col-md-5 ">
+                    <img alt="image of me" id="dog" src="img/temp2.jpg">
+                </div>
+            </div>
+            <div class="footer">
+                <p>&copy; 2017 Designed & Developed by Jose Torralba</p>
+            </div>
+        </section>
 	</div>
+    <!-- Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <!-- Animsition -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="../animsition/js/animsition.min.js"></script>
+	<script src="../animsition/js/fade.js"></script>
 </body>
 </html>
