--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -4,134 +4,160 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<title>MMP 210 Homepage</title>
-
-	<link href="../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
+	<title>Jose Torralba | Assignments</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
-	<link href="../animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
-	<link href="css/styles.css" rel="stylesheet"><!-- My CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <!-- Animsition CSS -->
+	<link href="../animsition/css/animsition.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+	<link href="css/styles.css" rel="stylesheet">
+    <!-- Font Awesome Icons -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
-
 	<div class="animsition">
+        <nav id="mainNav" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand animsition-link" href="../index.html">Jose Torralba</a> <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarCollapse" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link animsition-link" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link animsition-link active" href="assignments.html">Assignments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link animsition-link" href="../About/about.html">About</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-
-			<nav class="navbar navbar-default">
-				<div class="container-fluid">
-					<div class="navbar-header">
-
-						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-                            <span class="sr-only">Toggle navigation</span> 
-                            <span class="icon-bar"></span> 
-                            <span class="icon-bar"></span> 
-                            <span class="icon-bar"></span></button>
-
-                        <a id="nav-name" class="navbar-brand animated-links" href="index.html">MMP 210</a>
-
-					</div><!-- Navbar Header-->
-
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav">
-
-							<li>
-								<a class="animsition-link" href="../index.html">Home</a>
-							</li>
-
-							<li class="active">
-								<a class="animsition-link" href="assignments.html">Assignments<span class="sr-only">(current)</span></a>
-							</li>
-
-							<li>
-								<a class="animsition-link" href="../About/about.html">About</a>
-							</li>
-
-						</ul>
-					</div><!-- /.navbar-collapse -->
-				</div><!-- /.container-fluid -->
-			</nav>
-
-
-          <!-- Header -->
-
-          <div id="header" class="header">
-            <div class="container">
-              <div class="col-lg-12">
+        <header>
+            <div class="text-center">
                 <h1>Assignments</h1>
-              </div>
             </div>
-          </div>
 
+            <div class="row text-white">
+                <div class="col-md-6">
+                    <div class="icons">
+                        <i class="fas fa-code" id="code-icon"></i>
+                    </div>
+                    <h2 class="text-center">Assignments</h2>
+                    <p>Here you will find the assignments I have done in my Multimedia Programming class. You'll see what I have done with p5 JavaScript using Variables, Objects, Logic, Loops, & Functions</p>
+                    <a href="#assignments" class="btn assignment-button">View Assignments</a>
+                </div>
 
-            
-			<div class="container-fluid assignment-container" id="assignments">
-				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment1/self_portrait.html"><img alt="Assignment 1" src="img/assignment_1.jpg"> <span class="caption">Assignment #1<br>
-					<b>Self Portrait</b></span></a>
+                <div class="col-md-6">
+                    <div class="icons">
+                        <i class="fab fa-js" id="js-icon"></i>
+                    </div>
+                    <h2 class="text-center">Final</h2>
+                    <p>Final for my Multimedia Programming class. I made an interactive webpage that teaches you Japanese Hiragana. I used everything I have learned in class this semester with p5 JavaScript in this final.</p>
+                    <a href="#final" class="btn assignment-button">View Final</a>
+                </div>
+            </div>
+        </header>
+
+        <!-- First Row -->
+        <section class="assignments" id="assignments">
+
+            <div class="row first-row">
+                <div class="col-md-6 assignment-hover">
+                <h3 class="text-center">Assignment #1: Self Portrait</h3>
+					<a class="animsition-link" href="Assignment1/Assignment_1.html"><img alt="Assignment 1" src="img/assignment_1.jpg"></a>
 				</div>
 
-				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment2/Assignment_2.html"><img alt="Assignment 2" src="img/assignment_2.jpg"> <span class="caption">Assignment #2<br>
-					<b>Variables</b></span></a>
+				<div class="col-md-6 assignment-hover">
+                <h3 class="text-center">Assignment #2: Variables</h3>
+					<a class="animsition-link" href="Assignment2/Assignment_2.html"><img alt="Assignment 2" src="img/assignment_2.jpg"></a>
 				</div>
 
-				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment3/Assignment_3.html"><img alt="Assignment 3" src="img/assignment_3.jpg"> <span class="caption">Assignment #3<br>
-					<b>Logo</b></span></a>
-                </div>
-
-				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment4/Assignment_4.html"><img alt="Assignment 4" src="img/assignment_4.jpg"> <span class="caption">Assignment #4<br>
-					<b>Interactive Design</b></span></a>
-                </div>
-
-				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment5/Assignment_5.html"><img alt="Assignment 5" src="img/assignment_5.jpg"> <span class="caption">Assignment #5<br>
-					<b>Logic</b></span></a>
-                </div>
-
-				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment6/Assignment_6.html"><img alt="Assignment 6" src="img/assignment_6.gif"> <span class="caption">Assignment #6<br>
-					<b>Animation</b></span></a>
-                </div>
-
-				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment7/Assignment_7.html"><img alt="Assignment 7" src="img/assignment_7.jpg"> <span class="caption">Assignment #7<br>
-					<b>Loops & Functions</b></span></a>
-                </div>
-
-				<div class="col-sm-6 assignment-hover">
-					<a href="Midterm/Midterm.html"><img alt="Midterm" src="img/midterm.gif"> <span class="caption">Midterm<br>
-					<b>Generative Design</b></span></a>
-                </div>
-
-			</div><!-- Assignment Boxes End Here -->
-
-			<div class="container-fluid assignment-container" id="assignments">
-                <!-- Seperated col Here to Avoid Delays when Hovering -->                
-				<div class="center col-sm-6 assignment-hover">
-					<a href="Final/Final.html"><img alt="Final" src="img/assignment_2.jpg"> <span class="caption">Final<br>
-					<b>Interactive Media Player</b></span></a>
+                <div class="row">
+                    <a href="#second-row"><img src="img/scroll_down.gif"></a>
                 </div>
             </div>
 
-            <h2><a id="back-top" title="Back to top" href="#">Back To Top</a></h2>
+            <!-- Second Row -->
+            <div class="row second-row" id="second-row">
 
+				<div class="col-md-6 assignment-hover">
+                <h3 class="text-center">Assignment #3: Logo</h3>
+					<a class="animsition-link" href="Assignment3/Assignment_3.html"><img alt="Assignment 3" src="img/assignment_3.jpg"></a>
+                </div>
 
-	</div><!-- Animsition Ends Here -->
-	<div class="footer">
-		<footer class="footer">
-			<div class="container">
-				<p class="text-muted">Designed by Jose &copy; 2017</p>
-			</div>
-		</footer>
-	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- jQuery -->
-	<script src="../Bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap js -->
-	<script src="../animsition/js/animsition.min.js"></script><!-- Animsition js --> 
-	<script src="../animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
+				<div class="col-md-6 assignment-hover">
+                <h3 class="text-center">Assignment #4: Interaction</h3>
+					<a class="animsition-link" href="Assignment4/Assignment_4.html"><img alt="Assignment 4" src="img/assignment_4.jpg"></a>
+                </div>
+
+                <div class="row">
+                    <a href="#third-row"><img src="img/scroll_down.gif"></a>
+                </div>
+            </div>
+
+            <!-- Third Row -->
+            <div class="row third-row" id="third-row">
+				<div class="col-md-6 assignment-hover">
+                <h3 class="text-center">Assignment #5: Logic</h3>
+					<a class="animsition-link" href="Assignment5/Assignment_5.html"><img alt="Assignment 5" src="img/assignment_5.jpg"></a>
+                </div>
+
+				<div class="col-md-6 assignment-hover">
+                <h3 class="text-center">Assignment #6: Animation</h3>
+					<a class="animsition-link" href="Assignment6/Assignment_6.html"><img alt="Assignment 6" src="img/assignment_6.gif"></a>
+                </div>
+
+                <div class="row">
+                    <a href="#fourth-row"><img src="img/scroll_down.gif"></a>
+                </div>
+            </div>
+
+            <!-- Fourth Row -->
+            <div class="row fourth-row" id="fourth-row">
+
+				<div class="col-md-6 assignment-hover">
+                <h3 class="text-center">Assignment #7: Loops & Functions</h3>
+					<a class="animsition-link" href="Assignment7/Assignment_7.html"><img alt="Assignment 7" src="img/assignment_7.jpg"></a>
+                </div>
+
+				<div class="col-md-6 assignment-hover">
+                <h3 class="text-center">Assignment #8: Generative Design</h3>
+					<a class="animsition-link" href="Midterm/Midterm.html"><img alt="Midterm" src="img/midterm.gif"></a>
+                </div>
+
+                <div class="row">
+                    <a href="#final"><img src="img/scroll_down.gif"></a>
+                </div>
+            </div>
+
+            <!-- Fifth Row -->
+            <div class="row text-center" id="final">
+				<div class="center col-md-6 assignment-hover">
+                <h3 class="text-center">Final: Interactive Media Player</h3>
+					<a class="animsition-link" href="Final/Final.html"><img alt="Final" src="img/assignment_2.jpg"></a>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="row text-center">
+                <h3><a id="back-top" href="#">Back To Top</a></h3>
+            </div>
+            <div class="row">
+                <p>&copy; 2017 Designed & Developed by Jose Torralba</p>
+            </div>
+        </footer>
+    </div>
+    <!-- Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <!-- Animsition -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="../animsition/js/animsition.min.js"></script> 
+	<script src="../animsition/js/fade.js"></script>
 </body>
 </html>
