small changes, some what responsive

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <!-- Animsition CSS -->
 	<link href="animsition/css/animsition.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
+    <!-- Custom CSS & Media Query -->
 	<link href="css/styles.css" rel="stylesheet">
+    <link href="css/queries.css" rel="stylesheet">
 </head>
 <body>
 	<div class="animsition">
@@ -87,17 +88,17 @@
 
             <div class="row third-row">
 				<div class="col-md-4 center">
-                <h4 class="text-center">#7: Loops & Functions</h4>
+                <h4 class="text-center smaller-font">#7: Loops & Functions</h4>
 					<a class="animsition-link" href="Assignment7/Assignment_7.html"><img alt="Assignment 7" src="img/assignment_7.jpg" class="assignment-img"></a>
                 </div>
 
 				<div class="col-md-4 center">
-                <h4 class="text-center">#8: Generative Design</h4>
+                <h4 class="text-center smaller-font">#8: Generative Design</h4>
 					<a class="animsition-link" href="Midterm/Midterm.html"><img alt="Midterm" src="img/midterm.gif" class="assignment-img"></a>
                 </div>
                 
                 <div class="center col-md-4">
-                <h4 class="text-center">Final: Interactive Media Player</h4>
+                <h4 class="text-center smaller-font">#9: Interactive Media Player</h4>
 					<a class="animsition-link" href="Final/Final.html"><img alt="Final" src="img/assignment_2.jpg" class="assignment-img"></a>
                 </div>
             </div>
@@ -107,7 +108,7 @@
                 <h3 class="text-center" id="about">About Me</h3>
                 <div class="row">
                     <div class="col-md-7 order-2 order-md-12 about-text">
-                        <p class="lead">The name's Jose, an aspiring Front End Web Developer New York City. I am currently working as a supplemental instructor at Borough of Manhattan Community College for Multimedia Programming 100. On my free time, I usually replay Kingdom Hearts 2 due to it's amazing combat system and to kill time as I wait for Kingdom Hearts 3.</p>
+                        <p class="lead">The name's Jose, an aspiring Front End Web Developer from New York City. I am currently working as a supplemental instructor at Borough of Manhattan Community College for Multimedia Programming 100.</p>
                         <p class="lead">I have also taken <a href="https://josetorralba.github.io/MMP310/index.html" target="_blank" class="link">Multimedia Programming 310</a>, you can check that out if you are interested.</p>   
                     </div>
                     <div class="col-md-5 ">
