--- a/Assignment7/Assignment7_Functions/Assignment_7_Functions.html
+++ b/Assignment7/Assignment7_Functions/Assignment_7_Functions.html
@@ -21,13 +21,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link animsition-link" href="../../../index.html">Home</a>
+                        <a class="nav-link animsition-link" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link animsition-link active" href="../../assignments.html">Assignments</a>
+                        <a class="nav-link animsition-link active" href="../../index.html#assignments">Assignments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link animsition-link" href="../../../About/about.html">About</a>
+                        <a class="nav-link animsition-link" href="../../index.html#about">About</a>
                     </li>
                 </ul>
             </div>
